2011-05-17  Nick Clifton  <nickc@redhat.com>

	Import these patches from the mainline:

	2011-05-17  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.md: Add peephole to remove redundant extensions
	after loads.
	(bitset_in_memory): Use rx_restricted_mem_operand.
	(bitinvert_in_memory): Likewise.
	(bitclr_in_memory): Likewise.

	2011-05-17  Kazuhio Inaoka  <kazuhiro.inaoka.ud@renesas.com>
	    Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.md: Add peepholes to match a register move followed
	by a comparison of the moved register.  Replace these with an
	addition of zero that does both actions in one instruction.

2011-05-17  Jakub Jelinek  <jakub@redhat.com>

	PR target/48986
	* config/i386/sync.md (sync_old_add<mode>): Relax operand 2
	predicate to allow CONST_INT.

2011-05-16  Joseph Myers  <joseph@codesourcery.com>

	PR preprocessor/48677
	* cppspec.c (lang_specific_driver): Set new_decoded_options[0]
	from decoded_options[0], not from itself.

2011-05-16  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*movxf_internal): Disable CONST_DOUBLE
	optimization for CM_MEDIUM and CM_LARGE code models.  Fix usage
	of standard_80387_constant_p.
	(*movxf_internal_nointeger): Ditto.
	(*movdf_internal): Remove dead code-size optimization.
	(*movdf_internal_rex64): Fix usage of standard_80387_constant_p.
	(*movdf_internal_nointeger): Ditto.
	(*movsf_internal): Ditto.
	(floating point move splitters): Ditto.
	* config/i386/constraints.md (G): Ditto.
	* config/i386/i386.c (ix86_preferred_reload_class): Ditto.

2011-05-12  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48975
	* tree-if-conv.c (combine_blocks): Call free_bb_predicate
	on all bbs here and free and clear ifc_bbs at the end.

2011-05-12  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-05-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/48822
	* tree-ssa-sccvn.c (set_ssa_val_to): Never go up the lattice.
	(process_scc): Indicate which iteration we start.
